# axum_assessment_workspace

./: .gitignore  Cargo.toml  README.md  check.sh
doubler_crate/: Cargo.toml
doubler_crate/src/: lib.rs
src/: lib.rs
sum_crate/: Cargo.toml
sum_crate/src/: lib.rs
